--- a/src/style.css
+++ b/src/style.css
@@ -1,89 +1,54 @@
-:root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
-
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  -webkit-text-size-adjust: 100%;
+/* Custom CSS For Application: */
+#app {
+  text-align: center;
+  height: 500px;
 }
 
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
+.top {
+  background-color: #26001f;
 }
 
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
+.medium-purple-square {
+  background-color: #71105f;
+  border-radius: 15px;
+  margin-left: 25px;
+  margin-right: 25px;
+  height: 125px;
 }
 
-body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+/* Control the right side */
+.bottom {
+  background-color: #c222a4;
+}
+
+#about-button {
+  background-color: #d9d9d9;
+  background-image: url(assets/Info.png);
+  background-repeat: no-repeat;
+  background-position: 50% 50%;
+}
+
+#timer-button {
+  background-color: #d9d9d9;
+  background-image: url(assets/Clock.png);
+  background-repeat: no-repeat;
+  background-position: 50% 50%;
+}
+
+#stopwatch-button {
+  background-color: #d9d9d9;
+  background-image: url(assets/Stopwatch.png);
+  background-repeat: no-repeat;
+  background-position: 50% 50%;
+}
+
+#metronome-button {
+  background-color: #d9d9d9;
+  background-image: url(assets/Metronome.png);
+  background-repeat: no-repeat;
+  background-position: 50% 50%;
 }
 
 h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
-}
-
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
-}
-
-.card {
-  padding: 2em;
-}
-
-#app {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
-}
-
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
+  color: white;
 }
