--- a/src/style.css
+++ b/src/style.css
@@ -131,18 +131,16 @@
 
 .glossy-button:after {
   border-radius: 15px;
-
   content: '';
 	position: absolute;
 	top: 2px;
 	left: 2px;
 	height: 50%;
-	background: linear-gradient(rgba(255,255,255,0.8), rgba(255,255,255,0.2));
+	background-image: linear-gradient(rgba(255,255,255,0.8), rgba(255,255,255,0.2));
 }
 
 .glossy-button:hover {
-  /* background: linear-gradient(#818181,#11c7ff); */
-	background: linear-gradient(green,lightgreen);
+  background-image: linear-gradient(#818181,#11c7ff);
 }
 
 .timer-counter-div {
@@ -185,6 +183,10 @@
   color: #000000;
 }
 
+.start-button:hover {
+  background-image: linear-gradient(#ff7b00,#00FF38);
+}
+
 /* NOTE: When the start button is pressed, the style of the button will change to this one instead: */
 .stop-button {
   background: #FF0404;
@@ -203,7 +205,11 @@
   color: #000000;
 }
 
-.reset-mute-button {
+.stop-button:hover {
+  background-image: linear-gradient(#ff7b00,#FF0404);
+}
+
+.reset-button {
   background: #FFE600;
   border-radius: 15px;
   position: absolute;
@@ -218,6 +224,10 @@
   line-height: 30px;
   text-align: center;
   color: #000000;
+}
+
+.reset-button:hover {
+  background-image: linear-gradient(#ff7b00,#FFE600);
 }
 
 .menu {
